--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.0.1</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -41,18 +41,6 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin>
-			<!-- Runs JUnit 5 tests -->
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.0.1</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 			<!-- Make sure that the right JDK is used. -->
 			<plugin>
